--- a/src/main/webapp/scripts/app/usager/renouveler/renouvelerChoice.html
+++ b/src/main/webapp/scripts/app/usager/renouveler/renouvelerChoice.html
@@ -1,8 +1,6 @@
 <div ng-cloak>
-    <div class="row">
-    	<div class="col-xs-11 col-xs-offset-1 title-underscore">
-    		<h4 translate="renouveler.title">Request for a renewal</h4>
-   		</div>
+    <div class="row title-underscore">
+    	<h4 translate="renouveler.title">Request for a renewal</h4>
     </div>
     <br>
    	<div class="row row-center">
@@ -11,11 +9,11 @@
    	<br>
    	<br>
     <div class="row">
-    	<div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-1">
+    	<div class="col-sm-6 col-md-5 col-md-offset-1">
         	<box-menu class="box-home" boxtitle="renouveler.stateUnchange" boxlogo="repeat" ui-sref="usager/renouveler"></box-menu>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-5">
-	        <box-menu class="box-home" boxtitle="renouveler.stateChange" boxlogo="exchange"></box-menu>
+        <div class="col-sm-6 col-md-5">
+	        <box-menu class="box-home" boxtitle="renouveler.stateChange" boxlogo="exchange" disabled="true"></box-menu>
         </div>
     </div>
 </div>
