--- a/src/main/webapp/scripts/app/account/login/login.html
+++ b/src/main/webapp/scripts/app/account/login/login.html
@@ -1,11 +1,15 @@
 <div>
+    <div class="row title-underscore">
+    	<h4 translate="login.title">Authentication</h4>
+    </div>
+    <br><br>
     <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-            <h1 translate="login.title">Authentication</h1>
-
+        <div class="col-sm-10 col-sm-offset-1">
             <div class="alert alert-danger" ng-show="authenticationError" translate="login.messages.error.authentication">
                 <strong>Authentication failed!</strong> Please check your credentials and try again.
             </div>
+        </div>
+        <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
             <form class="form" role="form" ng-submit="login($event)">
                 <div class="form-group">
                     <label for="username" translate="global.form.email">Login</label>
@@ -22,9 +26,12 @@
                         <span translate="login.form.rememberme">Automatic Login</span>
                     </label>
                 </div>
-                <button type="submit" class="btn btn-primary" translate="login.form.button">Authenticate</button>
+                <br>
+                <div class="row-center">
+                	<button type="submit" class="btn btn-primary" translate="login.form.button">Authenticate</button>
+                </div>
             </form>
-            <p></p>
+            <br><br>
             <div class="alert alert-warning">
                 <a href="#/reset/request" translate="login.password.forgot">Did you forget your password?</a>
             </div>
