--- a/src/main/webapp/scripts/app/agent/etudier/identification/documents.html
+++ b/src/main/webapp/scripts/app/agent/etudier/identification/documents.html
@@ -1,12 +1,11 @@
 <div ng-cloak>
-    <div class="row">
-    	<div class="col-xs-11 col-xs-offset-1 col-sm-11 col-sm-offset-1 col-md-11 col-md-offset-1 col-lg-11 col-lg-offset-1 title-underscore">
-    		<h4 translate="identification.documents.title" translate-values="{ studentName: '{{studentName}}'}"></h4>
-   		</div>
+    <div class="row title-underscore">
+    	<h4 translate="identification.documents.title" translate-values="{ studentName: '{{studentName}}'}"></h4>
     </div>
-	<br>
+	<br><br>
+	
 	<div class="row">
-		<div class="col-xs-8 col-xs-offset-1 col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-lg-8 col-lg-offset-1">
+		<div class="col-xs-9 col-sm-8 col-sm-offset-1">
 			<div class="collapsable-panel" ng-class="{'opened': passportOpened}" ng-click="passportOpened = !passportOpened">
 				<div class="panel-heading">
 					<span class="glyphicon" ng-class="{'glyphicon-triangle-top': passportOpened, 'glyphicon-triangle-bottom': !passportOpened}"></span>
@@ -14,7 +13,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 validation-form">
+		<div class="col-xs-3 validation-form">
 			<img class="hand" src="assets/images/checkbox_unchecked.png" ng-show="!passportValidated" ng-click="passportValidated = !passportValidated; passportOpened = false;">
 			<img class="hand" src="assets/images/checkbox_checked.png" ng-show="passportValidated" ng-click="passportValidated = !passportValidated">
 			<span translate="identification.documents.toCertify" ng-show="!passportValidated">To validate</span>
@@ -22,7 +21,7 @@
 		</div>
 	</div>
 	<div class="row" ng-show="passportOpened">
-		<div class="col-xs-11 col-xs-offset-1 col-sm-11 col-sm-offset-1 col-md-11 col-md-offset-1 col-lg-11 col-lg-offset-1">
+		<div class="col-sm-11 col-sm-offset-1">
 			<div class="row validation-visualization-row" ng-class="{'opened': passportOpened}">
 				<div class="panel panel-default">
 					<div class="panel-body">
@@ -33,7 +32,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-xs-8 col-xs-offset-1 col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-lg-8 col-lg-offset-1">
+		<div class="col-xs-9 col-sm-8 col-sm-offset-1">
 			<div class="collapsable-panel" ng-class="{'opened': birthActOpened}" ng-click="birthActOpened = !birthActOpened">
 				<div class="panel-heading">
 					<span class="glyphicon" ng-class="{'glyphicon-triangle-top': birthActOpened, 'glyphicon-triangle-bottom': !birthActOpened}"></span>
@@ -41,7 +40,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 validation-form">
+		<div class="col-xs-3 validation-form">
 			<img class="hand" src="assets/images/checkbox_unchecked.png" ng-show="!birthActValidated" ng-click="birthActValidated = !birthActValidated; birthActOpened = false;">
 			<img class="hand" src="assets/images/checkbox_checked.png" ng-show="birthActValidated" ng-click="birthActValidated = !birthActValidated">
 			<span translate="identification.documents.toCertify" ng-show="!birthActValidated">To validate</span>
@@ -49,7 +48,7 @@
 		</div>
 	</div>
 	<div class="row" ng-show="birthActOpened">
-		<div class="col-xs-11 col-xs-offset-1 col-sm-11 col-sm-offset-1 col-md-11 col-md-offset-1 col-lg-11 col-lg-offset-1">
+		<div class="col-sm-11 col-sm-offset-1">
 			<div class="row validation-visualization-row" ng-class="{'opened': birthActOpened}">
 				<div class="panel panel-default">
 					<div class="panel-body">
@@ -62,12 +61,10 @@
 	<br>
 	<br>
 	<div class="row row-center">
-		<div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
-	    	<button class="btn btn-success" 
-	    			ng-disabled="!passportValidated || !birthActValidated" 
-	    			translate="identification.documents.button.accept"
-	    			ng-click="certify()" >Accept</button>
-		</div>
+    	<button class="btn btn-success" 
+    			translate="identification.documents.button.accept"
+    			ng-disabled="!passportValidated || !birthActValidated" 
+    			ng-click="certify()" >Accept</button>
 	</div>
 </div>
     
