--- a/src/main/webapp/scripts/app/agent/etudier/recevability/recevability_list.html
+++ b/src/main/webapp/scripts/app/agent/etudier/recevability/recevability_list.html
@@ -1,15 +1,14 @@
 <div ng-cloak>
-    <div class="row">
-    	<div class="col-xs-11 col-xs-offset-1 title-underscore">
-    		<h4 translate="recevability.list.title"></h4>
-   		</div>
+    <div class="row title-underscore">
+    	<h4 translate="recevability.list.title"></h4>
     </div>
-	<br>
+	<br><br>
+	
 	<div class="row">
-		<div class="col-xs-10 col-xs-offset-2" ng-if="demandes.length == 0">
+		<div class="col-xs-12 list" ng-if="demandes.length == 0">
 	    	<h5 translate="recevability.list.noApplication">No application</h5>
 	    </div>
-		<div class="col-xs-11 col-xs-offset-1" ng-if="demandes.length > 0">
+		<div class="col-xs-12 list" ng-if="demandes.length > 0">
 	    	<table class="table">
 				<thead>
 					<tr>
