--- a/src/main/webapp/scripts/app/usager/account/application/application.html
+++ b/src/main/webapp/scripts/app/usager/account/application/application.html
@@ -1,19 +1,18 @@
 <div ng-cloak>
-    <div class="row">
-    	<div class="col-xs-11 col-xs-offset-1 title-underscore">
-    		<h4 translate="application.title"></h4>
-   		</div>
+    <div class="row title-underscore">
+    	<h4 translate="application.title"></h4>
     </div>
-	<br>
+	<br><br>
+	
 	<div class="row" ng-show="demandes.length == 0">
-		<div class="col-xs-10 col-xs-offset-2">
+		<div class="col-sm-10 col-sm-offset-1">
 	    	<h5 translate="application.list.noApplication">No application</h5>
 	    </div>
 	</div>	
 	
 	<div ng-repeat="demande in demandes">
 		<div class="row">
-			<div class="col-xs-10 col-xs-offset-2">
+			<div class="col-sm-10 col-sm-offset-1">
 				<div class="collapsable-panel" ng-class="{'opened': demande.opened}" ng-click="demande.opened = !demande.opened">
 					<div class="panel-heading">
 						<span class="glyphicon" ng-class="{'glyphicon-triangle-top': demande.opened, 'glyphicon-triangle-bottom': !demande.opened}"></span>
@@ -30,7 +29,7 @@
 			</div>
 		</div>
 		<div class="row" ng-show="demande.opened">
-			<div class="col-xs-10 col-xs-offset-2">
+			<div class="col-sm-10 col-sm-offset-1">
 				<ul style="line-height: 2">
 					<li ng-if="demande.statut == 'draft'"
 						translate="application.list.modified" 
@@ -61,12 +60,10 @@
 			</div>
 		</div>
 		<div class="row row-center" style="margin-top: 10px;" ng-show="demande.opened">
-			<div class="col-xs-10 col-xs-offset-2">
-		    	<button class="btn btn-danger" translate="application.button.delete" ng-if="demande.statut == 'draft'" ng-click="remove(demande.id)">Delete</button>
-		    	<button class="btn btn-success" style="margin-left: 20px" translate="application.button.continue" ng-if="demande.statut == 'draft'" ng-click="goToDraft(demande.type)">Continue</button>
-		    	<button class="btn btn-success" translate="application.button.payment" ng-if="demande.statut == 'payment'" ng-click="goToPayment(demande.type)">RDV</button>
-		    	<button class="btn btn-success" translate="application.button.rdv" ng-if="demande.statut == 'rdv'" ui-sref="etudier/rdv">RDV</button>
-			</div>
+	    	<button class="btn btn-danger" translate="application.button.delete" ng-if="demande.statut == 'draft'" ng-click="remove(demande.id)">Delete</button>
+	    	<button class="btn btn-success btn-right" translate="application.button.continue" ng-if="demande.statut == 'draft'" ng-click="goToDraft(demande.type)">Continue</button>
+	    	<button class="btn btn-success" translate="application.button.payment" ng-if="demande.statut == 'payment'" ng-click="goToPayment(demande.type)">RDV</button>
+	    	<button class="btn btn-success" translate="application.button.rdv" ng-if="demande.statut == 'rdv'" ui-sref="etudier/rdv">RDV</button>
 		</div>
 		<br>
 		<br>
