--- a/src/main/webapp/scripts/app/usager/account/infos/infos.html
+++ b/src/main/webapp/scripts/app/usager/account/infos/infos.html
@@ -1,6 +1,5 @@
 <div ng-cloak>
-    <div class="row">
-    	<div class="col-xs-11 col-xs-offset-1 col-sm-11 col-sm-offset-1 col-md-11 col-md-offset-1 col-lg-11 col-lg-offset-1 title-underscore">
+    <div class="row title-underscore">
     		<h4 translate="infos.title">Request for a student stay</h4>
    		</div>
     </div>
@@ -12,7 +11,7 @@
 
 	<form name="infosForm" role="form" class="form-horizontal" novalidate ng-submit="save()" show-validation>
 		<div class="row">
-			<div class="col-xs-11 col-xs-offset-1">
+			<div class="col-sm-11 col-sm-offset-1">
 				<div class="collapsable-panel" ng-class="{'opened': identityOpened}" ng-click="identityOpened = !identityOpened">
 					<div class="panel-heading">
 						<span class="glyphicon" ng-class="{'glyphicon-triangle-top': identityOpened, 'glyphicon-triangle-bottom': !identityOpened}"></span>
@@ -22,7 +21,7 @@
 			</div>
 		</div>
 		<div class="row" ng-show="identityOpened">
-			<div class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
+			<div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3">
 				<div class="form-group">
 		            <label translate="infos.form.id" for="field_id">Id</label>
 		            <input type="text" class="form-control" name="id" id="field_id"
@@ -134,7 +133,7 @@
 		</div>
 		
 		<div class="row">
-			<div class="col-xs-11 col-xs-offset-1">
+			<div class="col-sm-11 col-sm-offset-1">
 				<div class="collapsable-panel" ng-class="{'opened': addressOpened}" ng-click="addressOpened = !addressOpened">
 					<div class="panel-heading">
 						<span class="glyphicon" ng-class="{'glyphicon-triangle-top': addressOpened, 'glyphicon-triangle-bottom': !addressOpened}"></span>
@@ -144,7 +143,7 @@
 			</div>
 		</div>
 	    <div class="row" ng-show="addressOpened">
-			<div class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
+			<div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3">
 		        <div class="form-group">
 		            <label translate="address.form.comingDate" for="field_comingDate">ComingDate</label>
 			        <div class="input-group date">
@@ -271,11 +270,9 @@
 		</div>
 		<br>
 	    <div class="row row-center">
-	    	<div class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
-	        	<button class="btn btn-default" translate="infos.form.button.back" ui-sref="usager/account">Back</button>
-	        	<button type="submit" style="margin-left: 20px" ng-disabled="infosForm.$invalid || infosForm.$submitted" class="btn btn-primary"
-	        		translate="infos.form.button.validate">Continue</button>
-       		</div>
+        	<button class="btn btn-default" translate="infos.form.button.back" ui-sref="usager/account">Back</button>
+        	<button type="submit" class="btn btn-primary btn-right" translate="infos.form.button.validate"
+        			 ng-disabled="infosForm.$invalid || infosForm.$submitted">Continue</button>
         </div>
 	</form>
 </div>
