--- a/src/main/webapp/scripts/app/usager/etudier/etudier.html
+++ b/src/main/webapp/scripts/app/usager/etudier/etudier.html
@@ -1,21 +1,19 @@
 <div ng-cloak>
-    <div class="row">
-    	<div class="col-xs-12 col-sm-11 col-sm-offset-1 title-underscore">
-    		<h4 translate="etudier.title">Request for a student stay</h4>
-   		</div>
+    <div class="row title-underscore">
+    	<h4 translate="etudier.title">Request for a student stay</h4>
     </div>
     <br>
     <div class="row">
-    	<div class="col-xs-10 col-xs-offset-1 col-sm-offset-2">
+    	<div class="col-xs-offset-1 col-sm-offset-2">
     		<h3 translate="etudier.step.title">5 steps for your request</h3>
     	</div>
    	</div>
    	<br><br>
     <div class="row">
 	    <div class="col-xs-1 col-xs-offset-1 col-sm-offset-2">
-	    	<span class="step-number-align">
+	    	<div class="step-number-align">
 	    		<div class="step-number">1</div>
-	    	</span>
+	    	</div>
 	    </div>
 	    <div class="col-xs-9 step-text">
 	    	<p translate="etudier.identity.step.long">Identity</p>
@@ -23,9 +21,9 @@
 	</div>
     <div class="row">
 	    <div class="col-xs-1 col-xs-offset-1 col-sm-offset-2">
-	    	<span class="step-number-align">
+	    	<div class="step-number-align">
 	    		<div class="step-number">2</div>
-	    	</span>
+	    	</div>
 	    </div>
 	    <div class="col-xs-9 step-text">
 	    	<p translate="etudier.address.step.long">Address</p>
@@ -33,9 +31,9 @@
 	</div>
     <div class="row">
 	    <div class="col-xs-1 col-xs-offset-1 col-sm-offset-2">
-	    	<span class="step-number-align">
+	    	<div class="step-number-align">
 	    		<div class="step-number">3</div>
-	    	</span>
+	    	</div>
 	    </div>
 	    <div class="col-xs-9 step-text">
 	    	<p translate="etudier.project.step.long">Project</p>
@@ -43,9 +41,9 @@
 	</div>
     <div class="row">
 	    <div class="col-xs-1 col-xs-offset-1 col-sm-offset-2">
-	    	<span class="step-number-align">
+	    	<div class="step-number-align">
 	    		<div class="step-number">4</div>
-	    	</span>
+	    	</div>
 	    </div>
 	    <div class="col-xs-9 step-text">
 	    	<p translate="etudier.summary.step.long">summary</p>
@@ -53,9 +51,9 @@
 	</div>
     <div class="row">
 	    <div class="col-xs-1 col-xs-offset-1 col-sm-offset-2">
-	    	<span class="step-number-align">
+	    	<div class="step-number-align">
 	    		<div class="step-number">5</div>
-	    	</span>
+	    	</div>
 	    </div>
 	    <div class="col-xs-9 step-text">
 	    	<p translate="etudier.payment.step.long">Payment</p>
@@ -63,7 +61,7 @@
 	</div>
 	<br>
     <div class="row">
-    	<div class="col-xs-10 col-xs-offset-1 well">
+    	<div class="col-md-10 col-md-offset-1 well">
     		<p>Pour pouvoir compléter votre dépôt de demande, vous devez impérativement être en possession :</p>
 			<ul>
 				<li>d'un passeport valide,</li>
