--- a/src/main/webapp/scripts/app/usager/etudier/identity/identity.html
+++ b/src/main/webapp/scripts/app/usager/etudier/identity/identity.html
@@ -1,8 +1,6 @@
 <div ng-cloak>
-    <div class="row">
-    	<div class="col-xs-11 col-xs-offset-1 col-sm-11 col-sm-offset-1 col-md-11 col-md-offset-1 col-lg-11 col-lg-offset-1 title-underscore">
-    		<h4 translate="etudier.title">Request for a student stay</h4>
-   		</div>
+    <div class="row title-underscore">
+    	<h4 translate="etudier.title">Request for a student stay</h4>
     </div>
     <br>
     <steps-menu stepnumber="1"></steps-menu>
@@ -11,18 +9,18 @@
 	<form name="identityForm" role="form" class="form-horizontal" novalidate ng-submit="save()" show-validation>
 	
 		<div class="row">
-			<div class="col-xs-1 col-xs-offset-1 col-sm-1 col-sm-offset-1 col-md-1 col-md-offset-1 col-lg-1 col-lg-offset-1">
-		    	<span class="step-number-align">
+			<div class="col-xs-1 col-xs-offset-1">
+		    	<div class="step-number-align">
 		    		<div class="step-number">1</div>
-		    	</span>
+		    	</div>
 		    </div>
-		    <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 form-title-text">
+		    <div class="col-xs-10 form-title-text">
 		    	<p translate="etudier.identity.step.long">Identity</p>
 		    </div>
 		</div>
 		<br>
 		<div class="row">
-			<div class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
+			<div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3">
 			    <div class="form-group">
 			        <label translate="identity.form.lastName" for="field_lastName">LastName</label>
 			        <input type="text" class="form-control" name="lastName" id="field_lastName" ng-model="identity.lastName"
@@ -129,16 +127,16 @@
 		</div>
 		<br>
 		<div class="row">
-			<div class="col-xs-1 col-xs-offset-1 col-sm-1 col-sm-offset-1 col-md-1 col-md-offset-1 col-lg-1 col-lg-offset-1">
+			<div class="col-xs-1 col-xs-offset-1">
 		    	
 		    </div>
-		    <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 form-title-text">
+		    <div class="col-xs-10 form-title-text">
 				<p translate="identity.form.document.title">Identity documents</p>
 		    </div>
 		</div>
 	    <br>
 	    <div class="row">
-			<div class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
+			<div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3">
 			    <div class="form-group">
 			        <label translate="identity.form.passport" for="field_passport">Passport</label>
 			    	<span class="glyphicon glyphicon-info-sign form-info" id="passport-info"
@@ -189,10 +187,8 @@
 		</div>
 		<br>
 	    <div class="row row-center">
-	    	<div class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
-	       		<button type="submit" ng-disabled="identityForm.$invalid || identityForm.$submitted" class="btn btn-primary"
-	       			translate="etudier.button.continue">Continue</button>
-      		</div>
+       		<button type="submit" class="btn btn-primary" translate="etudier.button.continue"
+       				 ng-disabled="identityForm.$invalid || identityForm.$submitted">Continue</button>
         </div>
 	</form>
 </div>
