--- a/src/main/webapp/scripts/app/usager/etudier/payment/payment.html
+++ b/src/main/webapp/scripts/app/usager/etudier/payment/payment.html
@@ -1,8 +1,6 @@
 <div ng-cloak>
-    <div class="row">
-    	<div class="col-xs-11 col-xs-offset-1 title-underscore">
-    		<h4 translate="etudier.title">Request for a student stay</h4>
-   		</div>
+    <div class="row title-underscore">
+    	<h4 translate="etudier.title">Request for a student stay</h4>
     </div>
     <br>
     <steps-menu stepnumber="5"></steps-menu>
@@ -10,9 +8,9 @@
 
 	<div class="row">
 		<div class="col-xs-1 col-xs-offset-1">
-	    	<span class="step-number-align">
+	    	<div class="step-number-align">
 	    		<div class="step-number">5</div>
-	    	</span>
+	    	</div>
 	    </div>
 	    <div class="col-xs-10 form-title-text">
 	    	<p translate="etudier.payment.step.long">Payment</p>
@@ -96,8 +94,8 @@
                     </div>
                     <br>
                     <div class="row row-center">
-                    	<button type="submit" ng-disabled="paymentForm.$invalid || paymentForm.$submitted" class="btn btn-success"
-							translate="etudier.button.payment">Payment</button>
+                    	<button type="submit" class="btn btn-success" translate="etudier.button.payment"
+                    			 ng-disabled="paymentForm.$invalid || paymentForm.$submitted">Payment</button>
                     </div>
                     <div class="row" style="display:none;">
                         <div>
