--- a/src/main/webapp/scripts/app/usager/etudier/rdv/rdv.html
+++ b/src/main/webapp/scripts/app/usager/etudier/rdv/rdv.html
@@ -1,20 +1,16 @@
 <div ng-cloak>
-    <div class="row">
-    	<div class="col-xs-11 col-xs-offset-1 title-underscore">
-    		<h4 translate="etudier.title">Request for a student stay</h4>
-   		</div>
+    <div class="row title-underscore">
+    	<h4 translate="etudier.title">Request for a student stay</h4>
     </div>
-    <br>
+    <br><br>
 
 	<form name="rdvForm" role="form" class="form-horizontal" novalidate ng-submit="save()" show-validation>
-		<div class="row row-center">
-			<div class="col-xs-10 col-xs-offset-1 form-title-text">
-		    	<p translate="rdv.form.title">RDV</p>
-		    </div>
+		<div class="row row-center form-title-text">
+		    <p translate="rdv.form.title">RDV</p>
 		</div>
 		<br>
 		<div class="row">
-	    	<div class="col-xs-10 col-xs-offset-1 col-lg-offset-1">
+	    	<div class="col-sm-10 col-sm-offset-1">
 	    		<div id="datetimepicker" class="img-thumbnail rdv">
 			    	<input type="text"
 		    			   	id="datetimepicker-input"
@@ -42,7 +38,7 @@
 		<br>
 		<br>
 	    <div class="row row-center">
-	    	<div class="col-xs-10 col-xs-offset-1">
+	    	<div class="col-sm-10 col-sm-offset-1">
 				<div class="panel panel-info">
 					<div class="panel-heading">
 						<h5 style="font-weight: normal; line-height: 1.5" translate="rdv.form.text">Please verify</h5>
@@ -70,10 +66,8 @@
 		<br>
 		<br>
 	    <div class="row row-center">
-	    	<div class="col-xs-6 col-xs-offset-3">
-	        	<button type="submit" ng-disabled="currentHour == ''" class="btn btn-primary"
-	        		translate="rdv.form.button">Continue</button>
-       		</div>
+        	<button type="submit" class="btn btn-primary" translate="rdv.form.button"
+        			 ng-disabled="currentHour == ''">Continue</button>
         </div>
 	</form>
 </div>
