--- a/src/main/webapp/scripts/app/usager/renouveler/final/final.html
+++ b/src/main/webapp/scripts/app/usager/renouveler/final/final.html
@@ -1,10 +1,8 @@
 <div ng-cloak>
-    <div class="row">
-    	<div class="col-xs-11 col-xs-offset-1 title-underscore">
-    		<h4 translate="etudier.title">Request for a student stay</h4>
-   		</div>
+    <div class="row title-underscore">
+    	<h4 translate="etudier.title">Request for a student stay</h4>
     </div>
-    <br>
+    <br><br>
 
 	<div class="row row-center">
 		<div class="col-xs-10 col-xs-offset-1">
@@ -23,9 +21,7 @@
 	</div>
 	<br>
 	<div class="row row-center">
-		<div class="col-xs-10 col-xs-offset-1">
-	    	<button class="btn btn-primary" ui-sref="account/application" translate="etudier.button.end">End</button>
-		</div>
+	    <button class="btn btn-primary" translate="etudier.button.end" ui-sref="account/application">End</button>
 	</div>
 </div>
     
