--- a/src/main/webapp/scripts/app/usager/renouveler/renouveler.html
+++ b/src/main/webapp/scripts/app/usager/renouveler/renouveler.html
@@ -1,12 +1,10 @@
 <div ng-cloak>
-    <div class="row">
-    	<div class="col-xs-12 col-sm-11 col-sm-offset-1 title-underscore">
-    		<h4 translate="etudier.title">Request for a student stay</h4>
-   		</div>
+    <div class="row title-underscore">
+    	<h4 translate="etudier.title">Request for a student stay</h4>
     </div>
     <br>
     <div class="row">
-    	<div class="col-xs-10 col-xs-offset-1 col-sm-offset-2">
+    	<div class="col-xs-offset-1 col-sm-offset-2">
    			<h3 translate="etudier.step.title">5 steps for your request</h3>
    		</div>
    	</div>
@@ -63,7 +61,7 @@
 	</div>
 	<br>
     <div class="row">
-    	<div class="col-xs-10 col-xs-offset-1 well">
+    	<div class="col-md-10 col-md-offset-1 well">
     		<p>Pour pouvoir compléter votre dépôt de demande, vous devez impérativement être en possession :</p>
     		<ul>
 				<li>d'un certificat d’inscription ou pré-inscription dans un établissement d'enseignement français,</li>
