--- a/src/main/webapp/scripts/app/usager/etudier/payment/payment.html
+++ b/src/main/webapp/scripts/app/usager/etudier/payment/payment.html
@@ -40,7 +40,7 @@
                         <div class="col-xs-12">
                             <div class="form-group">
                                 <label for="cardOwner" translate="payment.form.cardOwner">CARD OWNER</label>
-                                <input type="text" class="form-control" name="cardOwner" ng-model="payment.cardOwner" required autofocus />
+                                <input type="text" class="form-control" name="cardOwner" ng-model="payment.cardOwner" ng-change="autocomplete()" required autofocus />
                             </div>
                         </div>                        
                     </div>
@@ -95,7 +95,7 @@
                     <br>
                     <div class="row row-center">
                     	<button type="submit" class="btn btn-success" translate="etudier.button.payment"
-                    			 ng-disabled="paymentForm.$invalid || paymentForm.$submitted">Payment</button>
+                    			 ng-disabled="payment.cardOwner == null || payment.cardNumber == null || payment.cardExpiringDate == null || payment.cardCV == null || paymentForm.$invalid || paymentForm.$submitted">Payment</button>
                     </div>
                     <div class="row" style="display:none;">
                         <div>
