Creation page detail demande dans mon compte personnel

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -180,6 +180,8 @@
     <script src="scripts/app/usager/etudier/final/final.controller.js"></script>
     <script src="scripts/app/usager/etudier/rdv/rdv.js"></script>
     <script src="scripts/app/usager/etudier/rdv/rdv.controller.js"></script>
+    <script src="scripts/app/usager/etudier/detail/detail.js"></script>
+    <script src="scripts/app/usager/etudier/detail/detail.controller.js"></script>
     
     <!-- GROS COPIER COLLER DE LA MORT POUR LE RENOUVELEMENT -->
     <script src="scripts/app/usager/renouveler/renouveler.js"></script>
@@ -196,6 +198,8 @@
     <script src="scripts/app/usager/renouveler/payment/payment.controller.js"></script>
     <script src="scripts/app/usager/renouveler/final/final.js"></script>
     <script src="scripts/app/usager/renouveler/final/final.controller.js"></script>
+    <script src="scripts/app/usager/renouveler/detail/detail.js"></script>
+    <script src="scripts/app/usager/renouveler/detail/detail.controller.js"></script>
     
     <script src="scripts/app/agent/agent.js"></script>
     <script src="scripts/app/agent/control/control.js"></script>
