revue mail recevabilité

--- a/src/main/resources/mails/recevabilityEmail.html
+++ b/src/main/resources/mails/recevabilityEmail.html
@@ -9,7 +9,7 @@
             Hello,
         </p>
         <br/>
-        <p th:text="#{email.recevability.text1(${user.id})}">
+        <p th:text="#{email.recevability.text1}">
             Recevability success
         </p>
         <p th:text="#{email.recevability.text2}">
