--- a/src/main/webapp/scripts/app/usager/account/application/application.html
+++ b/src/main/webapp/scripts/app/usager/account/application/application.html
@@ -30,7 +30,7 @@
 		</div>
 		<div class="row" ng-show="demande.opened">
 			<div class="col-sm-10 col-sm-offset-1">
-				<a href="" class="detail-link" ng-click="goToDetail(demande.type, demande.id)">
+				<a href="" class="detail-link" ng-if="demande.statut !== 'draft'" ng-click="goToDetail(demande.type, demande.id)">
 					<span class="glyphicon glyphicon-search"></span>
 					<span translate="application.list.detail"></span>
 				</a>
