--- a/src/main/webapp/scripts/app/usager/renouveler/final/final.html
+++ b/src/main/webapp/scripts/app/usager/renouveler/final/final.html
@@ -14,7 +14,7 @@
 	<br>
 	<div class="row">
 		<div class="col-xs-10 col-xs-offset-1">
-			<p style="line-height: 2" translate="final.form.recevability">Recevability</p>
+			<p style="line-height: 2" translate="final.form.recevability.renouvellement">Recevability</p>
 			<br>
 			<p style="line-height: 2" translate="final.form.decision.renouvellement">Decision</p>
 		</div>
